Login and register are done. Models are created. New database backup is added.

--- a/templates/signup.html
+++ b/templates/signup.html
@@ -60,7 +60,13 @@
                     <input class="input is-large" type="text" name="pkodu" placeholder="Posta Kodu" required>
                 </div>
             </div>
+            <div class="field">
+            <input type="checkbox" id="doktor" name="doktor" value="1" style="height: 20px; width: 20px">
+                <label for="vehicle2" style="height: 30px"> Doktor</label><br>
+            <input type="checkbox" id="hemsire" name="hemsire" value="2" style="height: 20px; width: 20px">
+                <label for="vehicle2" style="height: 30px"> Hemsire </label><br>
 
+            </div>
             <button class="button is-block is-info is-large is-fullwidth">Kayıt Ol</button>
         </form>
     </div>
