--- a/templates/medicinelists.html
+++ b/templates/medicinelists.html
@@ -28,30 +28,15 @@
                     <input class="input is-large" type="text" name="vakasoyisim" placeholder="Soyisim" required>
                 </div>
             </div>
+
+            <div class="field">
+                <div class="control">
+                    <input class="input is-large" type="text" name="vakailacı" placeholder="İlaç Adı" required>
+                </div>
+            </div>
+
             <button class="button is-block is-info is-large is-fullwidth">Vakaya Yeni İlaç Ekle</button>
-            <br></br>
-            <button class="button is-block is-info is-large is-fullwidth">Vakadan İlaç Sil</button>
         </form>
     </div>
 </div>
-<table>
-    <thead>
-      <tr>
-          <th>Vaka TC Kimlik No   </th>
-          <th>Vaka İsmi    </th>
-          <th>Vaka Soyismi   </th>
-          <th>Vaka İlacı</th>
-      </tr>
-      </thead>    
-      <tbody>
-       {% for row in data %}    
-              <tr>
-                  <td>{{row[0]}}</td>
-                  <td>{{row[1]}}</td>
-                  <td>{{row[2]}}</td>
-                  <td>{{row[3]}}</td>
-              </tr>
-          {% endfor %}
-      </tbody>
-  </table>
 {% endblock %}
