Added hospital insertion system. Modified db definition to insure compatibility.

--- a/templates/base.html
+++ b/templates/base.html
@@ -83,6 +83,12 @@
                             <a href="{{ url_for('auth.logout') }}" class="navbar-item">
                                 Logout
                             </a>
+                            <a href="{{ url_for('main.medicinelists') }}" class="navbar-item">
+                                Vaka İlaç Listeleri
+                            </a>
+                            <a href="{{ url_for('main.hospitals') }}" class="navbar-item">
+                                Hastane İşlemleri
+                            </a>
                             {% endif %}
                         </div>
                     </div>
