--- a/templates/base.html
+++ b/templates/base.html
@@ -71,6 +71,11 @@
                                 Home
                             </a>
                             {% endif %}
+                            {% if current_user.is_authenticated %}
+                            <a href="{{ url_for('tables.show') }}" class="navbar-item">
+                                Tables
+                            </a>
+                            {% endif %}
                             {% if not current_user.is_authenticated %}
                             <a href="{{ url_for('auth.login') }}" class="navbar-item">
                                 Login
