--- a/templates/tables3.html
+++ b/templates/tables3.html
@@ -1,13 +1,8 @@
-
-<style>
- 
- td {
-        width: 150px;
-        text-align: center;
-        border: 1px solid black;
-        padding: 5px;
-      }
-</style>
+<head>
+    <link href="static/css/table.css" rel="stylesheet">
+    
+</head>
+{% extends "base.html" %}
 {% block content %}
 <table>
     <thead>
@@ -16,6 +11,7 @@
             <th>Doktor Sayısı</th>
             <th>Hasta Sayısı</th>
             <th>Ölüm Sayısı</th>
+            <th></th>
         </tr>
     </thead>    
     <tbody>
@@ -23,15 +19,10 @@
             <tr>
                 <td>{{row.isim}}</td>
                 <td>{{row.doktorsayisi}}</td>
-                 <td>{{row.hastasayisi}}</td>
-                  <td>{{row.olumsayisi}}</td>
-                <td><form action="{{ url_for('tables.show3') }}" method="POST">
-                    <input id="plaka" name="plaka" type="hidden" value="{{row.hastaneno}}">
-                    <button type="submit"> Detay </button>
-                </form></td>
+                <td>{{row.hastasayisi}}</td>
+                <td>{{row.olumsayisi}}</td>
             </tr>
         {% endfor %}
     </tbody>
 </table>
-
 {% endblock %}
