add read&create form for olasivakalar

--- a/templates/olasi_vakalar.html
+++ b/templates/olasi_vakalar.html
@@ -2,7 +2,7 @@
 {% block content %}
 
 <form class="form-inline" style="margin-left:auto">
-    <a href="{{url_for('main.yeni_vaka')}}" class="btn btn-outline-success" style="margin-left:5px" > Yeni Olasi Vaka </a>
+    <a href="{{url_for('main.yeni_olasi_vaka')}}" class="btn btn-outline-success" style="margin-left:5px" > Yeni Olasi Vaka </a>
 </form>
   
 <table class="table table-hover">
