--- a/templates/base.html
+++ b/templates/base.html
@@ -70,10 +70,30 @@
                             <a href="{{ url_for('main.index') }}" class="navbar-item">
                                 Home
                             </a>
-                            {% endif %}
-                            {% if current_user.is_authenticated %}
-                            <a href="{{ url_for('tables.show') }}" class="navbar-item">
-                                Tables
+                                <a href="{{ url_for('main.hospitals') }}" class="navbar-item">
+                                Hastane Ekle
+                            </a>
+                                <a href="{{ url_for('tables.show') }}" class="navbar-item">
+                                Durum Bilgileri
+                            </a>
+                                </a>
+                                <a href="{{ url_for('main.olasi_vakalar') }}" class="navbar-item">
+                                Olası Vakalar
+                            </a>
+                                 <div class="dropdown">
+                              <button class="dropbtn">Vaka</button>
+                              <div class="dropdown-content">
+                                  <a href="{{ url_for('main.ekle_vaka') }}" class="navbar-item"> Vaka Ekle </a>
+                                  <a href="{{ url_for('main.guncelle_vaka') }}" class="navbar-item"> Vaka Güncelle   </a>
+                                  <a href="{{ url_for('main.ekle_temasli') }}" class="navbar-item"> Temaslı Ekle </a>
+                                  <a href="{{ url_for('main.medicinelists') }}" class="navbar-item">
+                                Vaka İlaç Ekle
+                            </a>
+                              </div>
+                            </div>
+
+                                <a href="{{ url_for('auth.logout') }}" class="navbar-item">
+                                Logout
                             </a>
                             {% endif %}
                             {% if not current_user.is_authenticated %}
@@ -84,17 +104,12 @@
                                 Sign Up
                             </a>
                             {% endif %}
-                            {% if current_user.is_authenticated %}
-                            <a href="{{ url_for('auth.logout') }}" class="navbar-item">
-                                Logout
-                            </a>
-                            <a href="{{ url_for('main.medicinelists') }}" class="navbar-item">
-                                Vaka İlaç Listeleri
-                            </a>
-                            <a href="{{ url_for('main.hospitals') }}" class="navbar-item">
-                                Hastane İşlemleri
-                            </a>
-                            {% endif %}
+
+
+
+
+
+
                         </div>
                     </div>
                 </div>
