--- a/templates/base.html
+++ b/templates/base.html
@@ -70,8 +70,8 @@
                             <a href="{{ url_for('main.index') }}" class="navbar-item">
                                 Home
                             </a>
-                                <a href="{{ url_for('main.hospitals') }}" class="navbar-item">
-                                Hastane Ekle
+                                <a href="{{ url_for('main.hospitals') }}" class="navbar-item">Hastane Ekle </a>
+                                <a href="{{ url_for('main.deletehospitals') }}" class="navbar-item">Hastane Sil </a>
                             </a>
                                 <a href="{{ url_for('tables.show') }}" class="navbar-item">
                                 Durum Bilgileri
@@ -86,8 +86,8 @@
                                   <a href="{{ url_for('main.ekle_vaka') }}" class="navbar-item"> Vaka Ekle </a>
                                   <a href="{{ url_for('main.guncelle_vaka') }}" class="navbar-item"> Vaka Güncelle   </a>
                                   <a href="{{ url_for('main.ekle_temasli') }}" class="navbar-item"> Temaslı Ekle </a>
-                                  <a href="{{ url_for('main.medicinelists') }}" class="navbar-item">
-                                Vaka İlaç Ekle
+                                  <a href="{{ url_for('main.medicinelists') }}" class="navbar-item">Vaka İlaç Ekle</a>
+                                  <a href="{{ url_for('main.deletemedicinelists') }}" class="navbar-item">Vakadan İlaç Sil</a>
                             </a>
                               </div>
                             </div>
