--- a/templates/base.html
+++ b/templates/base.html
@@ -86,6 +86,7 @@
                                   <a href="{{ url_for('main.ekle_vaka') }}" class="navbar-item"> Vaka Ekle </a>
                                   <a href="{{ url_for('main.guncelle_vaka') }}" class="navbar-item"> Vaka Güncelle   </a>
                                   <a href="{{ url_for('main.ekle_temasli') }}" class="navbar-item"> Temaslı Ekle </a>
+                                  <a href="{{ url_for('main.izle_temasli') }}" class="navbar-item"> Temaslı İzle </a>
                                   <a href="{{ url_for('main.medicinelists') }}" class="navbar-item">Vaka İlaç Ekle</a>
                                   <a href="{{ url_for('main.deletemedicinelists') }}" class="navbar-item">Vakadan İlaç Sil</a>
                             </a>
